# MnA-Tax-Intelligence-Platform

./: .gitignore  README.md  ROADMAP.md  WORKFLOW.md  middleware.js  package-lock.json  package.json
Backend/: docker-compose.yml  main.py  populate_databases.py  pyproject.toml  setup_neo4j.md  setup_supabase.md  setup_supabase_chat.sql  test_document.txt
Backend/agents/: __init__.py  base.py  case_law.py  expert.py  irs_api.py  precedent.py  query_planning.py  regulation.py  web_search.py
Backend/api/: api.py  app.py  app_state.py
Backend/api/middleware/: error_handler.py
Backend/api/routes/: chat.py  health.py  metrics.py  query.py  upload.py
Backend/config/: function_tools_config.py  logging_config.py  settings.py
Backend/core/: constants.py  exceptions.py
Backend/database/: chat_repository.py  neo4j_client.py  supabase_client.py  vector_store.py
Backend/function_tools/: brave_search.py  irs_api.py  llm_enhancer.py  registry.py
Backend/models/: __init__.py  api_models.py  chat.py  enums.py  requests.py  responses.py  results.py  state.py  synthesis.py
Backend/orchestration/: orchestrator.py  phases.py  workflow.py
Backend/services/: document_processor.py  embedding_service.py  llm_synthesis_service.py  query_enhancer.py  search_service.py  synthesis_service.py
Backend/utils/: metrics.py  query_processor.py  text_processing.py  validators.py
Frontend/: PRD.md
Frontend/app/profile/: page.jsx
app/: globals.css  layout.jsx  page.jsx
app/auth/[auth0]/: route.js
components/: NavBar.jsx  Providers.jsx  TaxAssistantInterface.jsx
lib/: apiClient.js  useAuthUser.js
