[project]
name = "backend"
version = "0.1.0"
description = "Tax Research Multi-Agent RAG System with External Data Sourcing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "langgraph>=0.6.6",
    "langgraph-checkpoint>=2.1.1",
    "langchain-core>=0.2.30",
    "langchain-community>=0.2.11",
    "llama-index>=0.13.5",
    "neo4j>=5.28.2",
    "numpy>=2.3.2",
    "openai>=1.106.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.4.0",
    "supabase>=2.18.1",
    "uvicorn>=0.35.0",
    "websockets>=11.0.3",
    "aiohttp>=3.9.0",  
    "requests>=2.31.0", 
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "PyPDF2>=3.0.1",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "anyio>=4.3.0",
    "asyncio>=3.4.0",
    "python-multipart>=0.0.17",
]
